<?xml version="1.0"?>
<package format="2">
  <name>volta_simulation</name>

  <version>0.0.0</version>

  <description>The volta_simulation package</description>
  <maintainer email="mahendra.l@botsync.co">Mahendra L Seervi</maintainer>

  <license>BSD2</license>
  <author email="nikhil@botsync.sg">Nikhil Venkatesh</author>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
