<?xml version="1.0"?>
<package format="2">
  <name>volta_simulation</name>
  <version>0.0.0</version>
  <description>The volta_simulation package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <author email="mahendra.l@botsync.co ">Mahendra L Seervi</author>

  <maintainer email="mahendra.l@botsync.co">Mahendra L Seervi</maintainer>

  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>volta_control</run_depend>
  <run_depend>volta_description</run_depend>
  <run_depend>rostopic</run_depend>

</package>
