<?xml version="1.0"?>
<package format="2">
  <name>volta_simulation</name>
  <version>1.1.1</version>
  <description>The volta_simulation package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <author email="mahendra.l@botsync.co">Mahendra L Seervi</author>

  <maintainer email="nikhil@botsync.co">Nikhil Venkatesh</maintainer>
  <maintainer email="toship.s@botsync.co">Toship</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>volta_control</exec_depend>
  <exec_depend>volta_description</exec_depend>
  <exec_depend>rostopic</exec_depend>

</package>
